RESOLVED FIXED54407
NetBSD & DragonFly fixes
https://bugs.webkit.org/show_bug.cgi?id=54407
Summary NetBSD & DragonFly fixes
Thomas Klausner
Reported 2011-02-14 12:03:59 PST
Created attachment 82350 [details] Define NetBSD as OS, and handle DragonFly the same way was FreeBSD. The attached two patches fix JIT on NetBSD and add support for DragonFly BSD. They are by Matthias Drochner <drochner@NetBSD.org>.
Attachments
Define NetBSD as OS, and handle DragonFly the same way was FreeBSD. (505 bytes, patch)
2011-02-14 12:03 PST, Thomas Klausner
no flags
Fix for NetBSD. (1.06 KB, patch)
2011-02-14 12:04 PST, Thomas Klausner
no flags
Patch (1.08 KB, patch)
2011-02-26 14:31 PST, Patrick R. Gansterer
no flags
Thomas Klausner
Comment 1 2011-02-14 12:04:32 PST
Created attachment 82351 [details] Fix for NetBSD.
Thomas Klausner
Comment 2 2011-02-14 12:04:56 PST
Patch are for webkit-gtk-1.2.7, but I don't know what to choose for that in the Version dropbox.
Patrick R. Gansterer
Comment 3 2011-02-19 07:30:40 PST
Same basic comments as in bug 54406 about contributing. AFAIKS only the "DragonFly" patch is necessary. The other parts seam to be fixed already. Can you please try this with the current trunk?
Patrick R. Gansterer
Comment 4 2011-02-26 14:31:04 PST
Andreas Kling
Comment 5 2011-02-26 14:47:32 PST
Comment on attachment 83952 [details] Patch r=me
Patrick R. Gansterer
Comment 6 2011-02-26 15:04:11 PST
Comment on attachment 83952 [details] Patch Clearing flags on attachment: 83952 Committed r79812: <http://trac.webkit.org/changeset/79812>
Patrick R. Gansterer
Comment 7 2011-02-26 15:04:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.