2011-02-26  Patrick Gansterer  <paroga@webkit.org>

Reviewed by Andreas Kling.

        Add support for DragonFly BSD
        https://bugs.webkit.org/show_bug.cgi?id=54407

        DragonFly BSD is based on FreeBSD, so handle it like FreeBSD.

        * wtf/Platform.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@79812 bbb929c8-8fbe-4397-9dbb-9b2b20218538